--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,17 @@
 [package]
-name = "tic-tac-toe"
+name = "tictactoe"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lib]
+name = "tictactoe"
+src = "src/lib.rs"
+
+[[bin]]
+name = "main"
+path = "src/main.rs"
 
 [profile.release]
 codegen-units = 1
